--- a/static/style.css
+++ b/static/style.css
@@ -17,9 +17,6 @@
     margin-top: 50px;
 }
 
-#button-speaker{
-    margin: 3px 3px;
-}
 
 .totalParticipants{
     width: 100%;
@@ -115,11 +112,6 @@ h1, h2{
 }
 
 
-input[type='text'], #event-speaker, #event-name-select{
-    width: 600px;
-}
-
-
 @keyframes slide-in {
     from{
         margin-left: 30%;
@@ -162,16 +154,28 @@ input[type='text'], #event-speaker, #event-name-select{
 }
 
 
-@media (max-width: 770px) {
-     input[type="text"]{
-         width: 350px
-     } 
-     
-     #event-speaker, #event-name-select{
-         width: 350px;
-     }
+#button-speaker, #button-forward, #button-finalize-event,
+ #button-return, #button-go-ahead{
+    margin: 0px 10px 10px 0px;
 }
 
+@media(min-width: 768px){  
+
+    #speaker, #event, #event-date, #event-speaker, 
+    #name-participant, #birth, #event-name-select{
+        width: 650px;
+    }
+
+} 
+
+@media(max-width: 566px){
+    .navbar{
+        width: 566px;
+    }
+    .container, #list{
+        width: 566px;
+    }
+}
 
 @media (max-width: 500px) {
     .nav{
